# bgp-simulator-cpp-lowlevel-optimized

./: .gitignore  CMakeLists.txt  CSE3150_project_specification.md  README.md
docs/: cse3150_course_project.txt  documentation.md
scripts/: build.sh  run_benchmarks.sh  run_tests.sh
scripts/tests/: mini_anns.csv  mini_expected.csv
src/: allocator.h  announcement.h  as_graph.cpp  as_graph.h  bgp.cpp  bgp.h  main.cpp  mempool.h  ringbuf.h  simulator.cpp
